1.1.0 [2013-01-08]
 - Add support for solving singular problems with Krylov solvers (PETSc only)
 - Add new typedef dolfin::la_index for consistent indexing with linear algebra backends.
 - Change default unsigned integer type to std::size_t
 - Add support to attaching operator null space to preconditioner
   (required for smoothed aggregation AMG)
 - Add basic interface to the PETSc AMG preconditioner
 - Make SCOTCH default graph partitioner (GNU compatible free license, unlike ParMETIS)
 - Add scalable construction of mesh dual graph for mesh partitioning
 - Improve performance of mesh building in parallel
 - Add mesh output to SVG
 - Add support for Facet and cell markers to mesh converted from Diffpack
 - Add support for Facet and cell markers/attributes to mesh converted from Triangle
 - Change interface for auto-adaptive solvers: these now take the goal
   functional as a constructor argument
 - Add memory usage monitor: monitor_memory_usage()
 - Compare mesh hash in interpolate_vertex_values
 - Add hash() for Mesh and MeshTopology
 - Expose GenericVector::operator{+=,-=,+,-}(double) to Python
 - Add function Function::compute_vertex_values not needing a mesh argument
 - Add support for XDMF and HDF5
 - Add new interface LinearOperator for matrix-free linear systems
 - Remove MTL4 linear algebra backend
 - Rename down_cast --> as_type in C++ / as_backend_type in Python
 - Remove KrylovMatrix interface
 - Remove quadrature classes
 - JIT compiled C++ code can now include a dolfin namespace
 - Expression string parsing now understand C++ namespace such as std::cosh
 - Fix bug in Expression so one can pass min, max
 - Fix bug in SystemAssembler, where mesh.init(D-1, D) was not called before assemble
 - Fix bug where the reference count of Py_None was not increased
 - Fix bug in reading TimeSeries of size smaller than 3
 - Improve code design for Mesh FooIterators to avoid dubious down cast
 - Bug fix in destruction of PETSc user preconditioners